--- a/index.html
+++ b/index.html
@@ -92,8 +92,25 @@
         </div>
 
         <div class="col">
-          <section>
+          <section id="projects">
             <h4>Projects:</h4>
+            <div>
+              <h5>SMS Converter<a href="https://github.com/TimaGribanov/sms-converter" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
+              <span>HTML, CSS, Bootstrap, JavaScript</span>
+              <p>A JS-based tool to convert SM bodies to and from human-readable form.</p>
+              <p>Allow to convert sms bodies from GSM7, UCS2 and 8-bit to text, vice versa.</p>
+            </div>
+            <div class="mt-3">
+              <h5>Ajikan Worldwide Project<a href="https://github.com/TimaGribanov/ajikan-worldwide-project" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
+              <span>TypeScript, HTML, CSS, Bootstrap</span>
+              <p>A one-page site dedicated to the song cover project of one particular music band.</p>
+            </div>
+            <div class="mt-3">
+              <h5>Ajikan Database<a href="https://github.com/TimaGribanov/ajikan-database" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
+              <span>TypeScript, Node.js, HTML, CSS</span>
+              <p>This is a little project that allows anyone to get info about records that a certain song of a band Asian Kung-Fu Generation is on.</p>
+              <p>The project contains of back-end (PostgreSQL database and Node.js server) hosted on Heroku and front-end (HTML, CSS, JavaScript with alasql) hosted on GitHub Pages.</p>
+            </div>
           </section>
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
