--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Timofey Gribanov's CV</title>
+    <title>Timofei Gribanov's CV</title>
 
     <!-- Bootsstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -16,7 +16,7 @@
     <header class="container">
       <div id="header-desc" class="row m-0 p-2">
         <div id="header-desc-block" class="col ms-5 my-auto">
-          <h1 id="header-name">Timofey Gribanov</h1>
+          <h1 id="header-name">Timofei Gribanov</h1>
           <p class="header-description">Mobile Networks Technical Support and Integration Engineer</p>
           <p class="header-description">Web Development Enthusiast</p>
         </div>
