--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
               <p>Allow to convert sms bodies from GSM7, UCS2 and 8-bit to text, vice versa.</p>
             </div>
             <div class="mt-3">
+              <h5>akfgfragments site's WP theme<a href="https://github.com/TimaGribanov/akfgfragments_theme" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
+              <span>PHP, HTML, CSS, Bootstrap, WordPress</span>
+              <p>A simple theme for a WordPress-based site for akfgfragments projects.</p>
+            </div>
+            <div class="mt-3">
               <h5>Ajikan Worldwide Project<a href="https://github.com/TimaGribanov/ajikan-worldwide-project" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
               <span>TypeScript, HTML, CSS, Bootstrap</span>
               <p>A one-page site dedicated to the song cover project of one particular music band.</p>
