--- a/index.html
+++ b/index.html
@@ -162,6 +162,18 @@
               </div>
               <div class="col">
                 <div class="container">
+                  <div class="d-flex justify-content-center"><span class="dot" title="Intermediate Belarusian"></span></div>
+                  <div class="d-flex justify-content-center"><span>Belarusian</span></div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="container">
+                  <div class="d-flex justify-content-center"><span class="dot" title="Pre-intermediate Ukrainian"></span></div>
+                  <div class="d-flex justify-content-center"><span>Ukrainian</span></div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="container">
                   <div class="d-flex justify-content-center"><span class="dot beginner" title="Beginner Finnish"></span></div>
                   <div class="d-flex justify-content-center"><span>Finnish</span></div>
                 </div>
@@ -195,6 +207,8 @@
           <span>TypeScript</span>
           <span>HTML</span>
           <span>CSS</span>
+          <span>Bootstrap</p>
+          <span>PHP</span>
           <span>Perl</span>
           <span>Bash</span>
           <span>Shell Scripting</span>
