--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
               </div>
               <div class="col">
                 <div class="container">
-                  <div class="d-flex justify-content-center"><span class="dot" title="Intermediate Belarusian"></span></div>
+                  <div class="d-flex justify-content-center"><span class="dot intermediate" title="Intermediate Belarusian"></span></div>
                   <div class="d-flex justify-content-center"><span>Belarusian</span></div>
                 </div>
               </div>
               <div class="col">
                 <div class="container">
-                  <div class="d-flex justify-content-center"><span class="dot" title="Pre-intermediate Ukrainian"></span></div>
+                  <div class="d-flex justify-content-center"><span class="dot intermediate" title="Pre-intermediate Ukrainian"></span></div>
                   <div class="d-flex justify-content-center"><span>Ukrainian</span></div>
                 </div>
               </div>
