--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <span>TypeScript</span>
           <span>HTML</span>
           <span>CSS</span>
-          <span>Bootstrap</p>
+          <span>Bootstrap</span>
           <span>PHP</span>
           <span>Perl</span>
           <span>Bash</span>
