--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <h6>GeekBrains<a href="https://gb.ru/certificates/1938761.en" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Aug 2022</span>
             </div>
-            <div>
+            <div class="mt-3">
               <h5>JavaScript Algorithms and Data Structures</h5>
               <h6>freeCodeCamp<a href="https://freecodecamp.org/certification/timagribanov/javascript-algorithms-and-data-structures" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Feb 2022</span>
