--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Timofey Gribanov's CV</title>
 
-    <!-- Bootsstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
@@ -30,7 +30,7 @@
         <div class="container-fluid">
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav navbar-centre">
-              <li class="nav-item me-3"><i class="bi bi-geo-alt-fill me-1"></i>St Petersburg, Russia</li>
+              <li class="nav-item me-3"><i class="bi bi-geo-alt-fill me-1"></i>Budapest, Hungary</li>
               <li class="nav-item me-3"><i class="bi bi-envelope-fill me-1"></i><a href="mailto:t.gribanow@gmail.com">t.gribanow@gmail.com</a></li>
               <li class="nav-item me-3"><i class="bi bi-linkedin me-1"></i><a href="https://www.linkedin.com/in/timofeygribanov" target="_blank">linkedin.com/in/timofeygribanov</a></li>
               <li class="nav-item"><i class="bi bi-github me-1"></i><a href="https://github.com/TimaGribanov" target="_blank">github.com/TimaGribanov</a></li>
@@ -46,9 +46,16 @@
           <section id="work">
             <h4>Work experience:</h4>
             <div>
+              <h5>Verification Engineer</h5>
+              <h6>Protei<a href="https://ericsson.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Mar 2023 – </span><br/>
+              <span>Budapest, Hungary</span><br/>
+              <p></p>
+            </div>
+            <div>
               <h5>Mobile Networks Support & Integration Engineer</h5>
               <h6>Protei<a href="https://protei.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
-              <span>Apr 2020 – </span><br/>
+              <span>Apr 2020 – Feb 2023</span><br/>
               <span>St Petersburg, Russia</span><br/>
               <p>Integration (installation and configuration) and technical support (troubleshooting and issues solving) of Mobile Networks products, such as SMSC platform, SMS Firewall, STP, CAMEL Gateway, DRA, HLR/HSS.</p>
             </div>
