--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h4>Work experience:</h4>
             <div>
               <h5>Verification Engineer</h5>
-              <h6>Protei<a href="https://ericsson.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <h6>Ericsson<a href="https://ericsson.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Mar 2023 – </span><br/>
               <span>Budapest, Hungary</span><br/>
               <p></p>
