--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="header-desc" class="row m-0 p-2">
         <div id="header-desc-block" class="col ms-5 my-auto">
           <h1 id="header-name">Timofei Gribanov</h1>
-          <p class="header-description">Mobile Networks Technical Support and Integration Engineer</p>
+          <p class="header-description">Verification Engineer</p>
           <p class="header-description">Web Development Enthusiast</p>
         </div>
 
