New photo; new certification

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="header-photo" class="col my-auto">
-          <img src="assets/photo.jpeg" class="img-thumbnail float-end rounded-circle me-5">
+          <img src="assets/photo_2.jpg" class="img-thumbnail float-end rounded-circle me-5">
         </div>
       </div>
 
@@ -32,7 +32,7 @@
             <ul class="navbar-nav navbar-centre">
               <li class="nav-item me-3"><i class="bi bi-geo-alt-fill me-1"></i>Budapest, Hungary</li>
               <li class="nav-item me-3"><i class="bi bi-envelope-fill me-1"></i><a href="mailto:t.gribanow@gmail.com">t.gribanow@gmail.com</a></li>
-              <li class="nav-item me-3"><i class="bi bi-linkedin me-1"></i><a href="https://www.linkedin.com/in/timofeygribanov" target="_blank">linkedin.com/in/timofeygribanov</a></li>
+              <li class="nav-item me-3"><i class="bi bi-linkedin me-1"></i><a href="https://www.linkedin.com/in/timagribanov/" target="_blank">linkedin.com/in/timagribanov/</a></li>
               <li class="nav-item"><i class="bi bi-github me-1"></i><a href="https://github.com/TimaGribanov" target="_blank">github.com/TimaGribanov</a></li>
             </ul>
           </div>
@@ -50,7 +50,7 @@
               <h6>Ericsson<a href="https://ericsson.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Mar 2023 – </span><br/>
               <span>Budapest, Hungary</span><br/>
-              <p></p>
+              <p>As a part of a testing team I'm responsible for developing test cases to test a radio network HW.</p>
             </div>
             <div>
               <h5>Mobile Networks Support & Integration Engineer</h5>
@@ -126,6 +126,11 @@
           </section>
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
+            <div>
+              <h5>Java Programming I</h5>
+              <h6>Univerity of Helsinki<a href="https://certificates.mooc.fi/validate/4rmkvb0edg3" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Jun 2023</span>
+            </div>
             <div>
               <h5>Java level 1</h5>
               <h6>GeekBrains<a href="https://gb.ru/certificates/1938761.en" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
