--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
             <div>
+              <h5>EF SET English Certificate (77/100 C2 Proficient)</h5>
+              <h6>EF SET<a href="https://www.efset.org/cert/ev5ebK" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Jul 2023</span>
+            </div>
+            <div>
               <h5>Java Programming I</h5>
               <h6>Univerity of Helsinki<a href="https://certificates.mooc.fi/validate/4rmkvb0edg3" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Jun 2023</span>
