--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <span>Budapest, Hungary</span><br/>
               <p>As a part of a testing team I'm responsible for developing test cases to test a radio network HW.</p>
             </div>
-            <div>
+            <div class="mt-3">
               <h5>Mobile Networks Support & Integration Engineer</h5>
               <h6>Protei<a href="https://protei.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Apr 2020 – Feb 2023</span><br/>
@@ -131,12 +131,12 @@
               <h6>EF SET<a href="https://www.efset.org/cert/ev5ebK" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Jul 2023</span>
             </div>
-            <div>
+            <div class="mt-3">
               <h5>Java Programming I</h5>
               <h6>Univerity of Helsinki<a href="https://certificates.mooc.fi/validate/4rmkvb0edg3" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Jun 2023</span>
             </div>
-            <div>
+            <div class="mt-3">
               <h5>Java level 1</h5>
               <h6>GeekBrains<a href="https://gb.ru/certificates/1938761.en" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Aug 2022</span>
