--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
             <div>
+              <h5>Scientific Computing with Python</h5>
+              <h6>freeCodeCamp<a href="https://www.freecodecamp.org/certification/timagribanov/scientific-computing-with-python-v7" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Aug 2023</span>
+            </div>
+            <div class="mt-3">
               <h5>EF SET English Certificate (77/100 C2 Proficient)</h5>
               <h6>EF SET<a href="https://www.efset.org/cert/ev5ebK" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Jul 2023</span>
