--- a/index.html
+++ b/index.html
@@ -46,16 +46,30 @@
           <section id="work">
             <h4>Work experience:</h4>
             <div>
+              <h5>Experienced Test Automation Engineer</h5>
+              <h6>Ericsson<a href="https://ericsson.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Jul 2023 – </span><br/>
+              <span>Budapest, Hungary</span><br/>
+              <p>As a part of a testing team I'm responsible for developing test cases to test a radio network HW.</p>
+            </div>
+            <div class="mt-3">
               <h5>Verification Engineer</h5>
               <h6>Ericsson<a href="https://ericsson.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
-              <span>Mar 2023 – </span><br/>
+              <span>Mar 2023 – Jun 2023</span><br/>
               <span>Budapest, Hungary</span><br/>
               <p>As a part of a testing team I'm responsible for developing test cases to test a radio network HW.</p>
             </div>
             <div class="mt-3">
               <h5>Mobile Networks Support & Integration Engineer</h5>
               <h6>Protei<a href="https://protei.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
-              <span>Apr 2020 – Feb 2023</span><br/>
+              <span>Sep 2022 – Feb 2023</span><br/>
+              <span>St Petersburg, Russia (remotely from Dushanbe, Tajikistan)</span><br/>
+              <p>Integration (installation and configuration) and technical support (troubleshooting and issues solving) of Mobile Networks products, such as SMSC platform, SMS Firewall, STP, CAMEL Gateway, DRA, HLR/HSS.</p>
+            </div>
+            <div class="mt-3">
+              <h5>Mobile Networks Support & Integration Engineer</h5>
+              <h6>Protei<a href="https://protei.com" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Apr 2020 – Sep 2022</span><br/>
               <span>St Petersburg, Russia</span><br/>
               <p>Integration (installation and configuration) and technical support (troubleshooting and issues solving) of Mobile Networks products, such as SMSC platform, SMS Firewall, STP, CAMEL Gateway, DRA, HLR/HSS.</p>
             </div>
