Java II UoH cert

--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
             <div>
+              <h5>Java Programming II</h5>
+              <h6>Univerity of Helsinki<a href="https://certificates.mooc.fi/validate/p8m0mriul1i" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Sep 2023</span>
+            </div>
+            <div class="mt-3">
               <h5>Scientific Computing with Python</h5>
               <h6>freeCodeCamp<a href="https://www.freecodecamp.org/certification/timagribanov/scientific-computing-with-python-v7" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Aug 2023</span>
