--- a/index.html
+++ b/index.html
@@ -127,20 +127,25 @@
               <p>A simple theme for a WordPress-based site for akfgfragments projects.</p>
             </div>
             <div class="mt-3">
-              <h5>Ajikan Worldwide Project<a href="https://github.com/TimaGribanov/ajikan-worldwide-project" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
-              <span>TypeScript, HTML, CSS, Bootstrap</span>
-              <p>A one-page site dedicated to the song cover project of one particular music band.</p>
+              <h5>Ajikan Database<a href="https://github.com/TimaGribanov/ajikan-database" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
+              <span>ReactJS, NodeJS, CSS</span>
+              <p>This is a little project that allows anyone to get info about records that a certain song of a band Asian Kung-Fu Generation is on.</p>
+              <p>The project contains of backend (MariaDB database and NodeJS/express server) and frontend (ReactJS, CSS).</p>
             </div>
             <div class="mt-3">
-              <h5>Ajikan Database<a href="https://github.com/TimaGribanov/ajikan-database" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
-              <span>TypeScript, Node.js, HTML, CSS</span>
-              <p>This is a little project that allows anyone to get info about records that a certain song of a band Asian Kung-Fu Generation is on.</p>
-              <p>The project contains of back-end (PostgreSQL database and Node.js server) hosted on Heroku and front-end (HTML, CSS, JavaScript with alasql) hosted on GitHub Pages.</p>
+              <h5>Ajikan Worldwide Project<a href="https://github.com/TimaGribanov/ajikan-worldwide-project" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h5>
+              <span>JavaScript, HTML, CSS, Bootstrap</span>
+              <p>A one-page site dedicated to the song cover project of one particular music band.</p>
             </div>
           </section>
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
             <div>
+              <h5>Full Stack Open</h5>
+              <h6>Univerity of Helsinki<a href="https://studies.cs.helsinki.fi/stats/api/certificate/fullstackopen/en/0e6a9585c1258c11e85eaa5eeeb26ae8" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Oct 2023</span>
+            </div>
+            <div class="mt-3">
               <h5>Java Programming II</h5>
               <h6>Univerity of Helsinki<a href="https://certificates.mooc.fi/validate/p8m0mriul1i" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Sep 2023</span>
@@ -238,6 +243,15 @@
       <section id="skills" class="row">
         <h4>Skills:</h4>
         <div>
+          <span>JavaScript</span>
+          <span>TypeScript</span>
+          <span>ReactJS</span>
+          <span>NodeJS</span>
+          <span>Full Stack</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>Bootstrap</span>
+          <span>PHP</span>
           <span>Telecommunications</span>
           <span>2G</span>
           <span>3G</span>
@@ -249,12 +263,6 @@
           <span>SMPP</span>
           <span>Linux</span>
           <span>Ansible</span>
-          <span>JavaScript</span>
-          <span>TypeScript</span>
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>Bootstrap</span>
-          <span>PHP</span>
           <span>Perl</span>
           <span>Bash</span>
           <span>Shell Scripting</span>
