--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
                   <div class="d-flex justify-content-center"><span>Ukrainian</span></div>
                 </div>
               </div>
-              <div class="col">
+<!--               <div class="col">
                 <div class="container">
                   <div class="d-flex justify-content-center"><span class="dot beginner" title="Beginner Finnish"></span></div>
                   <div class="d-flex justify-content-center"><span>Finnish</span></div>
                 </div>
-              </div>
+              </div> -->
               <div class="col">
                 <div class="container">
                   <div class="d-flex justify-content-center"><span class="dot beginner" title="Beginner Japanese"></span></div>
