--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
           <section id="certs" class="mt-4">
             <h4>Certifications:</h4>
             <div>
+              <h5>Java and Web Application Security</h5>
+              <h6>SCADEMY<a href="https://cert.scademy.com/certificate/sTeRJeDabhwXghKrwEyy" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
+              <span>Dec 2023</span>
+            </div>
+            <div class="mt-3">
               <h5>Full Stack Open</h5>
               <h6>Univerity of Helsinki<a href="https://studies.cs.helsinki.fi/stats/api/certificate/fullstackopen/en/0e6a9585c1258c11e85eaa5eeeb26ae8" target="_blank"><i class="bi bi-box-arrow-up-right ms-1"></i></a></h6>
               <span>Oct 2023</span>
